# Minisiem

./: CMakeLists.txt  README.md  config.yaml
include/: minisiem.hpp
src/: main.cpp  minisiem.cpp
tests/: test_minisiem.cpp
